Fixed the timeline text-overflow

--- a/diary_portal/diary/static/diary/timeline.css
+++ b/diary_portal/diary/static/diary/timeline.css
@@ -1,6 +1,4 @@
-ul.nav.nav-tabs{
 
-}
 h2{
     font-family: 'Allura';
     font-size: 70px;
@@ -25,6 +23,8 @@ h2{
 .timeline ul {
     margin:0;
     padding:0;
+    word-break: break-word !important;
+    hyphens: auto !important;
 }
 .timeline ul li{
     list-style:none;
@@ -33,6 +33,7 @@ h2{
     padding:20px 40px;
     box-sizing: border-box;
 }
+
 .timeline ul li:nth-child(odd){
     float:left;
     text-align:right;
